# ChangeLog for sec-policy/selinux-apache
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.23 2009/12/16 02:54:13 pebenito Exp $

  01 Jan 2011; Chris Richards <gizmo@www.giz-works.com>
  +selinux-apache-2.20101213.ebuild, +metadata.xml:
  New upstream release

*selinux-apache-2.20101213 (01 Jan 2011)

  01 Jan 2011; Chris Richards <gizmo@www.giz-works.com>
  +selinux-apache-2.20101213.ebuild, +metadata.xml:
  Update ebuild with Kerberos dependency

*selinux-apache-2.20091215 (16 Dec 2009)

  16 Dec 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-apache-2.20091215.ebuild:
  New upstream release.

  14 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  -selinux-apache-20070329.ebuild, -selinux-apache-20070928.ebuild,
  selinux-apache-20080525.ebuild:
  Mark 20080525 stable, clear old ebuilds.

*selinux-apache-2.20090730 (03 Aug 2009)

  03 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-apache-2.20090730.ebuild:
  New upstream release.

  18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
  selinux-apache-20070329.ebuild, selinux-apache-20070928.ebuild,
  selinux-apache-20080525.ebuild:
  Drop alpha, mips, ppc, sparc selinux support.

*selinux-apache-20080525 (25 May 2008)

  25 May 2008; Chris PeBenito <pebenito@gentoo.org>
  +selinux-apache-20080525.ebuild:
  New SVN snapshot.

  16 Mar 2008; Chris PeBenito <pebenito@gentoo.org>
  -selinux-apache-20040925.ebuild, -selinux-apache-20050211.ebuild,
  -selinux-apache-20061114.ebuild:
  Remove old ebuilds.

  03 Feb 2008; Chris PeBenito <pebenito@gentoo.org>
  selinux-apache-20070928.ebuild:
  Mark stable.

*selinux-apache-20070928 (26 Nov 2007)

  26 Nov 2007; Chris PeBenito <pebenito@gentoo.org>
  +selinux-apache-20070928.ebuild:
  New SVN snapshot.

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kaiowas from metadata due to his retirement (see #61930 for
  reference).
