@@ -1,4 +1,5 @@
 DIST refpolicy-2.20101213.tar.bz2 559450 RMD160 4858f792f4db5b179de6fb8419a626c29d59bdd3 SHA1 0e881e99b8950a358eadc44633551ca10f12eaee SHA256 b691ee8f6066cc19bb0d4384fe3be277d97d22e9d4ac2db0c252065e8c3535de
-EBUILD selinux-apache-2.20101213.ebuild 1328 RMD160 6d47596a0318f2be3e5b6d1a8b5dd8ffecc473bd SHA1 06e619f267697a0a8eb3bb197a3851e9f8c4fe24 SHA256 bf8ef9a098eb128f931270acd4de0fa9d9455886ae4fa761ac6d626c732e49b5
-MISC ChangeLog 3683 RMD160 1cc6ab4c64982baff126d8eddce126afabb46552 SHA1 9f48101272cf10d04abdcdc95f95b4732b4e604a SHA256 d62bc731def32df9a813c766868dab6f72db8904292e40e43b64ffd4ea2f481a
+EBUILD selinux-apache-2.20101213-r1.ebuild 1321 RMD160 bb6ac20011d3b8e157b43c6c10afa1d3968de936 SHA1 21c258bceb2f278f289ab2be2f7f03713ee2765f SHA256 886ee874e71e1df53578ca31c1a473aec16960ce95cc5c1f176cb6aeeeeec339
+EBUILD selinux-apache-2.20101213.ebuild 1327 RMD160 dd705ce00eb0959b86721b91f5b9ac3250a166af SHA1 22c47aaad7862eac2a3259594d1465b76f82cf5c SHA256 6cf36187b5299c1eac07704b9619389f2961866aef4100f8dafe37f321763a4e
+MISC ChangeLog 3868 RMD160 a3d6ccec5474e190cef8873120a0a18f373ee727 SHA1 d7e315748929c3c8bbcd972820322e0e4168fd60 SHA256 7c63eb2c673ba5bcd71d1e1dcc1710223a92dc7c0b514e61a0984ccc8d86bc6a
 MISC metadata.xml 390 RMD160 5dd9ef3671beb253772f62dd20154117516a47a7 SHA1 732a05c75fe27d607e2f8ced34d82974e28cd170 SHA256 6466bab9f1a35551de2ce180189caf8da0fc4dea43ac9868b1d3651c5978bcf5
